# ecos-studio

./: .bazelrc  .gitignore  CONTRIBUTING.md  MODULE.bazel  Makefile  README.md  flake.nix
ecos/: BUILD.bazel  README.md
ecos/docs/: FAQ.md  PLAN.md
ecos/gui/: .gitignore  README.md  default.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts
ecos/gui/apps/desktop-electron/: electron-builder.yml  electron.vite.config.ts  electronBuilderConfig.test.ts  package.json  tsconfig.json
ecos/gui/apps/desktop-electron/electron/: electronBuilderConfig.test.ts  electronViteConfig.test.ts
ecos/gui/apps/desktop-electron/electron/main/: createMainWindow.test.ts  createMainWindow.ts  gpuMode.test.ts  gpuMode.ts  index.ts  registerIpc.test.ts  registerIpc.ts
ecos/gui/apps/desktop-electron/electron/preload/: index.ts
ecos/gui/apps/desktop-electron/electron/services/: apiCliAdapter.test.ts  apiCliAdapter.ts  apiCommandAdapter.test.ts  apiCommandAdapter.ts  apiServerService.test.ts  apiServerService.ts  appInfoService.test.ts  appInfoService.ts  commandBusService.test.ts  commandBusService.ts  designFileService.test.ts  designFileService.ts  designFilelist.ts  desktopCliBridgeService.test.ts  desktopCliBridgeService.ts  desktopLogPaths.test.ts  desktopLogPaths.ts  desktopRuntimeManager.test.ts  desktopRuntimeManager.ts  developmentWrappers.test.ts  eccCliAdapter.test.ts  eccCliAdapter.ts  eccCliRuntime.test.ts  eccCliRuntime.ts  eccDbRuntimeManager.test.ts  eccDbRuntimeManager.ts  layoutViewerService.test.ts  layoutViewerService.ts  localPath.test.ts  logTailService.ts  logger.test.ts  logger.ts  menuService.test.ts  menuService.ts  projectScopeService.fallbackPdkName.test.ts  projectScopeService.test.ts  projectScopeService.ts  remoteContentService.test.ts  remoteContentService.ts  remoteContentSources.ts  (+19 more)
ecos/gui/apps/desktop-electron/scripts/: after-pack-linux-sandbox.mjs  after-pack-linux-sandbox.test.ts  buildGuiBundleValidation.test.ts  dev.mjs  dev.test.ts  makeCheckPlatform.test.ts  prepare-native-layout-viewer-binaries.mjs  prepare-native-layout-viewer-binaries.test.ts  prepare-package-resources.sh  prepare-package-resources.test.ts  serverBundleBuildConfig.test.ts  verify-package.mjs  verify-package.test.ts
ecos/gui/apps/renderer/: package.json  vite.config.ts  vite.shared.ts
ecos/gui/apps/renderer/src/: App.vue  main.ts
ecos/gui/apps/renderer/src/api/: client.test.ts  client.ts  desktopPayload.ts  flow.desktop-ipc.test.ts  flow.ts  index.ts  plugin.test.ts  plugin.ts  runtimeEvents.desktop-cli.test.ts  runtimeEvents.ts  sse.desktop-cli.test.ts  sse.ts  type.tech.test.ts  type.ts  workspace.desktop-ipc.test.ts  workspace.ts  workspaceResources.desktop-ipc.test.ts  workspaceResources.ts
ecos/gui/apps/renderer/src/components/: AIChatPanel.vue  AboutDialog.vue  ChatInspectorPanel.fullscreen.test.ts  ChatInspectorPanel.vue  ChecklistTable.vue  DesignFileTransfer.vue  DesignFileTransferTree.vue  DesignFilesManageDialog.test.ts  DesignFilesManageDialog.vue  DrawingArea.lifecycleGuard.test.ts  DrawingArea.loadingState.test.ts  DrawingArea.nativeLayoutViewer.test.ts  DrawingArea.runtime.test.ts  DrawingArea.tileGenerationWarning.test.ts  DrawingArea.vue  DrawingAreaShell.test.ts  DrawingAreaShell.vue  DrawingToolbar.nativeLayoutViewer.test.ts  DrawingToolbar.previewMode.test.ts  DrawingToolbar.vue  ECOSTerminal.test.ts  ECOSTerminal.vue  FlowLogCodeViewer.vue  FlowLogStepChooser.test.ts  FlowLogStepChooser.vue  FlowLogStepList.vue  LayerPanel.emptyState.test.ts  LayerPanel.vue  LeftSidebar.vue  MapsGallery.vue  MessageItem.vue  NewProjectWizard.test.ts  NewProjectWizard.vue  PluginToolsPanel.vue  SoCTemplateDetail.test.ts  SoCTemplateDetail.vue  SoCTemplateGallery.test.ts  SoCTemplateGallery.vue  SoCTemplateInspector.test.ts  (+16 more)
ecos/gui/src/: App.vue
ecos/gui/src-tauri/: tauri.conf.json
ecos/gui/src/components/: AIChatPanel.vue  MessageItem.vue  TopBar.vue
ecos/gui/src/composables/: useWorkspace.test.ts  useWorkspace.ts
ecos/gui/src/stores/: messageStore.ts
ecos/gui/src/views/: HomeView.vue  homeMonitorCharts.ts
ecos/layout-viewer/: Cargo.toml  README.md  default.nix
ecos/layout-viewer/apps/layout-packer-cli/: Cargo.toml
ecos/layout-viewer/apps/layout-packer-cli/src/: main.rs
ecos/layout-viewer/apps/layout-viewer-native/: Cargo.toml
ecos/layout-viewer/apps/layout-viewer-native/src/: main.rs  plane_cache.rs  raster_plane.rs  render_surface.rs
ecos/layout-viewer/apps/layoutpkg-probe-cli/: Cargo.toml
ecos/layout-viewer/apps/layoutpkg-probe-cli/src/: main.rs
ecos/layout-viewer/crates/layout-display/: Cargo.toml
ecos/layout-viewer/crates/layout-display/src/: lib.rs
ecos/layout-viewer/crates/layout-render/: Cargo.toml
ecos/layout-viewer/crates/layout-render/src/: lib.rs
ecos/layout-viewer/crates/layoutdb/: Cargo.toml
ecos/layout-viewer/crates/layoutdb/src/: lib.rs
ecos/layout-viewer/crates/layoutpkg-format/: Cargo.toml
ecos/layout-viewer/crates/layoutpkg-format/src/: lib.rs
ecos/layout-viewer/crates/layoutpkg-packer/: Cargo.toml  build.rs
ecos/layout-viewer/crates/layoutpkg-packer/src/: lib.rs
ecos/layout-viewer/crates/layoutpkg-reader/: Cargo.toml
ecos/layout-viewer/crates/layoutpkg-reader/src/: lib.rs
ecos/layout-viewer/crates/viewjson-importer/: Cargo.toml
ecos/layout-viewer/crates/viewjson-importer/src/: lib.rs
ecos/scripts/: build-ecc.sh  build-gui.sh  ecc-wrapper.sh  ecos-layout-packer-wrapper.sh  layout-viewer-native-wrapper.sh
ecos/server/: default.nix  ecos.spec  pyproject.toml
ecos/server/ecos_server/: _log.py  main.py
ecos/server/ecos_server/ecc/services/: ecc.py
ecos/server/ecos_server/resource/: __init__.py  installer.py  inventory.py  jobs.py  paths.py  pdks.py  registry.py  resolver.py  router.py  schemas.py  tools.py
ecos/server/tests/: test_api_logging.py  test_dispatch.py  test_rtl_list_api.py  test_service_pdk_root.py
ecos/server/tests/resource/: test_installer.py  test_inventory.py  test_pdks.py  test_registry.py  test_resolver.py  test_router.py  test_schemas.py  test_tools.py
(+178 files in other folders)
