module(
    name = "ecos_studio",
    version = "0.1.0-alpha.5",
)

bazel_dep(name = "ecc")
bazel_dep(name = "ecc-dreamplace", version = "0.1.0")

bazel_dep(name = "ecos-bazel")
git_override(
    module_name = "ecos-bazel",
    remote = "https://github.com/Emin017/ecos-bazel.git",
    commit = "1f223bae8abeed392c72162cd5e98ecbd4f13b9c",
)

local_path_override(
    module_name = "ecc",
    path = "ecc",
)

local_path_override(
    module_name = "ecc-dreamplace",
    path = "ecc/chipcompiler/thirdparty/ecc-dreamplace",
)

appimage_tool = use_extension("@ecos-bazel//rules:appimage-tool.bzl", "appimage_tool")
use_repo(appimage_tool, "appimagetool_x86_64_linux")

oss_cad_suite = use_extension("@ecos-bazel//rules:oss_cad_suite.bzl", "oss_cad_suite")
use_repo(oss_cad_suite, "oss_cad_suite", "oss_cad_suite_pruned")
