module(
    name = "ecos_studio",
    version = "0.1.0-alpha.5",
)

bazel_dep(name = "ecc")
bazel_dep(name = "ecc-dreamplace", version = "0.1.0")
bazel_dep(name = "ecos-bazel")
git_override(
    module_name = "ecos-bazel",
    commit = "1f223bae8abeed392c72162cd5e98ecbd4f13b9c",
    remote = "https://github.com/Emin017/ecos-bazel.git",
)

# Pin the ECC CLI bundle input used by the Bazel release build.
git_override(
    module_name = "ecc",
    # v0.1.0-alpha.3-unstable-e2515dc
    commit = "e2515dc1a97035c1221e3b954b3c66d38162a1a0",
    init_submodules = True,
    remote = "https://github.com/openecos-projects/ecc.git",
)

git_override(
    module_name = "ecc-dreamplace",
    commit = "1e9d038870efa0141b6122e120456c7eb05c8fee",
    recursive_init_submodules = True,
    remote = "https://github.com/openecos-projects/ecc-dreamplace.git",
)

# Use monorepo mode for ecc and ecc-dreamplace to avoid issues with git overrides and submodules.
# local_path_override(
#     module_name = "ecc",
#     path = "ecc",
# )
# local_path_override(
#     module_name = "ecc-dreamplace",
#     path = "ecc-dreamplace",
# )

appimage_tool = use_extension("@ecos-bazel//rules:appimage-tool.bzl", "appimage_tool")
use_repo(appimage_tool, "appimagetool_x86_64_linux")

oss_cad_suite = use_extension("@ecos-bazel//rules:oss_cad_suite.bzl", "oss_cad_suite")
use_repo(oss_cad_suite, "oss_cad_suite", "oss_cad_suite_pruned")
