module(
    name = "ecos_studio",
    version = "0.1.0-alpha.5",
)

bazel_dep(name = "ecc")
bazel_dep(name = "ecc-dreamplace", version = "0.1.0")
bazel_dep(name = "ecos-bazel")
git_override(
    module_name = "ecos-bazel",
    commit = "1f223bae8abeed392c72162cd5e98ecbd4f13b9c",
    remote = "https://github.com/Emin017/ecos-bazel.git",
)

# Pin the ECC CLI bundle input used by the Bazel release build.
git_override(
    module_name = "ecc",
    # workspace config sync and rerun artifact preparation
    commit = "a853a1d213ee5eef18b5f8357f456ee1ff98d46d",
    init_submodules = True,
    remote = "https://github.com/openecos-projects/ecc.git",
)

git_override(
    module_name = "ecc-dreamplace",
    commit = "1e9d038870efa0141b6122e120456c7eb05c8fee",
    recursive_init_submodules = True,
    remote = "https://github.com/openecos-projects/ecc-dreamplace.git",
)

# Use monorepo mode for ecc and ecc-dreamplace to avoid issues with git overrides and submodules.
# local_path_override(
#     module_name = "ecc",
#     path = "ecc",
# )
# local_path_override(
#     module_name = "ecc-dreamplace",
#     path = "ecc-dreamplace",
# )

appimage_tool = use_extension("@ecos-bazel//rules:appimage-tool.bzl", "appimage_tool")
use_repo(appimage_tool, "appimagetool_x86_64_linux")
