package(default_visibility = ["//visibility:public"])

filegroup(
    name = "build_gui_script",
    srcs = ["scripts/build-gui.sh"],
)

# Electron bundle - ChipCompiler specific
genrule(
    name = "ecos_studio_bundle",
    srcs = glob([
        "gui/apps/**/*",
        "gui/packages/**/*",
    ], exclude = [
        "gui/apps/**/dist/**",
        "gui/apps/**/node_modules/**",
        "gui/packages/**/dist/**",
        "gui/packages/**/node_modules/**",
    ]) + [
        "gui/package.json",
        "gui/pnpm-lock.yaml",
        "gui/pnpm-workspace.yaml",
        "gui/tailwind.config.ts",
    ] + [
        "@oss_cad_suite_pruned//:all_files",
        "@oss_cad_suite_pruned//:yosys_bin",
        "@ecc//:build_ecc_cli_bundle",
        ":build_gui_script",
    ],
    outs = ["ecos_studio_bundle/ecos_studio_bundle.tar"],
    local = True,
    cmd = """
        set -euo pipefail

        bash "$(location :build_gui_script)" \\
            --gui-src-dir "$$(dirname $(location gui/package.json))" \\
            --oss-cad-bin "$(location @oss_cad_suite_pruned//:yosys_bin)" \\
            --ecc-cli-artifact "$(location @ecc//:build_ecc_cli_bundle)" \\
            --out-tar "$@"
    """,
)
