[workspace]
resolver = "2"
members = [
  "crates/layoutdb",
  "crates/layout-display",
  "crates/layout-render",
  "crates/layoutpkg-format",
  "crates/viewjson-importer",
  "crates/layoutpkg-packer",
  "crates/layoutpkg-reader",
  "apps/layout-packer-cli",
  "apps/layoutpkg-probe-cli",
  "apps/layout-viewer-native",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
byteorder = "1.5"
clap = { version = "4.5", features = ["derive"] }
eframe = "0.31"
egui = "0.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.10"
thiserror = "2.0"
rstar = "0.13"
