[package]
name = "layout-viewer-native"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
eframe.workspace = true
egui.workspace = true
layout-display = { path = "../../crates/layout-display" }
layout-render = { path = "../../crates/layout-render" }
layoutdb = { path = "../../crates/layoutdb" }
layoutpkg-reader = { path = "../../crates/layoutpkg-reader" }
