[package]
name = "layoutpkg-packer"
edition.workspace = true
license.workspace = true
version.workspace = true
build = "build.rs"

[dependencies]
anyhow.workspace = true
layoutpkg-format = { path = "../layoutpkg-format" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
viewjson-importer = { path = "../viewjson-importer" }

[build-dependencies]
sha2.workspace = true

[dev-dependencies]
flate2.workspace = true
tempfile.workspace = true
